field-forms/objects/Form_Section__c/Form_Section__c.object-meta.xml
<CustomObject>
    <label>Form Section</label>
    <nameField>
        <label>Form Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>