field-forms/objects/Form_Section__c/fields/Column_Size__c.field-meta.xml
<CustomField>
    <fullName>Column_Size__c</fullName>
    <label>Column Size</label>
    <length>40</length>
    <type>Text</type>
</CustomField>