field-forms/objects/Form_Section__c/fields/Form_Page__c.field-meta.xml
<CustomField>
    <fullName>Form_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Page</label>
    <referenceTo>Form_Page__c</referenceTo>
    <relationshipLabel>Form Sections</relationshipLabel>
    <relationshipName>Form_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>