field-forms/objects/Form_Section__c/fields/Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Section__c</fullName>
    <label>Form Section</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>