field-forms/objects/Form_Section__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Sum of Form_Question_Catalog__c.Weight__c for catalog entries referenced by this section's Form_Question bindings. Denormalized for read perf (matches the snapshot architecture pattern — see docs/snapshot-v2.md). Populated by the snapshot writer / catalog backfill batch; may be null in templates where Scoring_Enabled__c is off or the field hasn't been backfilled yet.</description>
    <label>Max Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>