field-forms/objects/Form_Section__c/fields/Padding__c.field-meta.xml
<CustomField>
    <fullName>Padding__c</fullName>
    <label>Padding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>