field-forms/objects/Form_Section__c/fields/Policy_Text__c.field-meta.xml
<CustomField>
    <fullName>Policy_Text__c</fullName>
    <description>Per-section guidance / assessment instructions surfaced by the renderer as a collapsible help panel. Populated by adapters (Steritech audit JSON ships this on every line item) so customer policy language travels with the section. Optional; null for sections without policy content.</description>
    <label>Policy Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>