field-forms/objects/Form_Section__c/fields/Show_Title__c.field-meta.xml
<CustomField>
    <fullName>Show_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Title</label>
    <type>Checkbox</type>
</CustomField>