field-forms/objects/Form_Section__c/fields/Title_Alignment__c.field-meta.xml
<CustomField>
    <fullName>Title_Alignment__c</fullName>
    <label>Title Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>left</fullName>
            </value>
            <value>
                <fullName>center</fullName>
            </value>
            <value>
                <fullName>right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>